--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,41 @@
-<h2>Sign up</h2>
+<!-- new sign up  -->
+  <div class="container-spacial">
+    <div class="form-background">
+      <h1 class="formh1">Sign up</h1>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name, html: { class: 'helo'})) do |f| %>
+        <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :first_name,
-                required: true,
-                autofocus: true %>
-    <%= f.input :last_name,
-                required: true,
-                autofocus: true %>
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :address,
-                required: true,
-                autofocus: true %>
+        <div class="form-inputs">
+          <%= f.input :first_name,
+                      required: true,
+                      autofocus: true %>
+          <%= f.input :last_name,
+                      required: true,
+                      autofocus: true %>
+          <%= f.input :email,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "email" }%>
+          <%= f.input :password,
+                      required: true,
+                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation,
+                      required: true,
+                      input_html: { autocomplete: "new-password" } %>
+          <%= f.input :address,
+                      required: true,
+                      autofocus: true %>
+          </div>
+
+        <div class="form-actions">
+          <%= f.button :submit, "Sign up", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+    <div class="login">
+      <p>If you already have an account<%= render "devise/shared/links" %></p>
+    </div>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up", class: 'btn btn-primary' %>
-  </div>
-<% end %>
-<p></p>
-<%= render "devise/shared/links" %>
