--- a/app/views/pages/user_show.html.erb
+++ b/app/views/pages/user_show.html.erb
@@ -47,7 +47,7 @@
           <% if order.state != "rejected" %>
             <div class="card">
               <%= render 'shared/card', order: order, user: order.item.user, item_var: order.item, order_div: true %>
-              <%= button_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to cancel this request?"}, class: "btn btn-sm delete-btn item-btn" %>
+              <%= button_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, class: "btn btn-sm delete-btn item-btn" %>
             </div>
           <% end %>
         <% end %>
@@ -72,8 +72,8 @@
             <% if (order.state === 'pending' || order.state === 'paid') %>
               <div class="card">
                 <%= render 'shared/card', order: order, user: order.user, item_var: order.item, order_div: true %>
-                <%= button_to "Accept", order_path(order, order: {state: "accepted"}), method: :put, data: { confirm: "Are you sure you wish to approve this request?"}, class: "btn btn-sm edit-btn item-btn" %>
-                <%= button_to "Reject", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to reject this request?"}, class: "btn btn-sm delete-btn item-btn" %>
+                <%= button_to "Accept", order_path(order, order: {state: "accepted"}), method: :put, class: "btn btn-sm edit-btn item-btn" %>
+                <%= button_to "Reject", order_path(order, order: {state: "rejected"}), method: :put, class: "btn btn-sm delete-btn item-btn" %>
               </div>
             <% end %>
         <% end %>
@@ -87,7 +87,7 @@
         <% if (order.state === "accepted")%>
             <div class="card">
               <%= render 'shared/card', order: order, user: order.user, item_var: order.item, order_div: true %>
-              <%= button_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to cancel this request?"}, class: "btn btn-sm delete-btn item-btn" %>
+              <%= button_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, class: "btn btn-sm delete-btn item-btn" %>
             </div>
         <% end %>
       <% end %>
