--- a/app/assets/stylesheets/components/_show-list.scss
+++ b/app/assets/stylesheets/components/_show-list.scss
@@ -40,7 +40,7 @@
       margin-bottom: 16px;
 
       a:hover {
-        text-decoration: underline;
+        text-decoration: none;
       }
     }
   }
